--- a/LAB2Banco/src/main/java/com/unab/edu/vistas/Usuario.form
+++ b/LAB2Banco/src/main/java/com/unab/edu/vistas/Usuario.form
@@ -93,12 +93,14 @@
                                           </Group>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="lblSaldo" min="-2" pref="111" max="-2" attributes="0"/>
+                                      <Component id="lblSaldo" min="-2" pref="61" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="lblDisponible" min="-2" pref="23" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="42" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -123,6 +125,7 @@
                   <Component id="lbl$" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtRetiro" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblSaldo" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblDisponible" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnRetirar" min="-2" max="-2" attributes="0"/>
@@ -159,6 +162,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="RETIRAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRetirarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtRetiro">
       <Properties>
@@ -218,6 +224,14 @@
           <Font name="Times New Roman" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="BANCO CENTRAL SALVADORE&#xd1;O"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblDisponible">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Times New Roman" size="12" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="."/>
       </Properties>
     </Component>
   </SubComponents>
