--- a/LAB2Banco/src/main/java/com/unab/edu/vistas/Admin.form
+++ b/LAB2Banco/src/main/java/com/unab/edu/vistas/Admin.form
@@ -167,6 +167,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="ABONAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAbonarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
     </Component>
